<resources>
    <string name="app_name">iSight</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="action_sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="userAge">Age</string>
    <string name="userPhoneNumber">Phone number (optional)</string>
    <string name="action_back">Back</string>
    <string name="Test">Test</string>
    <string name="visual_acuity">Visual Acuity</string>
    <string name="Presbyopic">Presbyopic</string>
    <string name="Color_Blind">Color Blindness</string>
    <string name="Amsler_Grid">Amsler Grid</string>
    <string name="motion_acuity">Motion Acuity</string>
    <string name="astigmatism">Astigmatism</string>
    <string name="pupillary_distance">Pupillary Distance</string>
    <string name="action_unable">I can\'t see it</string>
    <string name="action_next">Next</string>
    <string name="action_start_quiz">Start A Quiz</string>
    <string name="during1">1 month</string>
    <string name="during2">3 month</string>
    <string name="during3">6 month</string>
    <string name="during4">12 month</string>
    <string name="action_choose_test">Test type : </string>
    <string name="login_account">Username or Email Address</string>
    <string name="test_colorblind">Color Blind Test</string>
    <string name="action_showresult">Result</string>
    <string name="res_colorblind">Normal color vision: 26\nRed color blind (protanopia):6\nmild red color blind (prontanomaly): 2\nGreen color blind (deuteranopia): 2\nmild green color blind (deuteranomaly): 6</string>
    <string name="Quiz">Quiz</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="quiz_question_index">1</string>
    <string name="quiz_question">. Rubbing your eye is a good way to remove foreign particles:</string>
    <string name="quiz_result1">Correct:</string>
    <string name="quiz_result2"><b>10</b></string>
    <string name="quiz_result3">Wrong:</string>
    <string name="quiz_result4">3</string>
    <string name="quiz_result5">Your test scores are</string>
    <string name="quiz_result6">10</string>
    <string name="quiz_result7">points.\n</string>
    <string name="quiz_result_pass">Congratulations, you know how to protect your eyes very well!</string>
    <string name="quiz_result_fail">wrong question1:false</string>
    <string name="test_amslerGrid">Amsler Grid</string>
    <string name="testInstruction_amslerGrid">Please cover one eye, look at the dot in the center of the grid, and check how the grid appear:</string>
    <string name="amsler_grid_check1">Distortion or wavy lines</string>
    <string name="amsler_grid_check2">Blurring or grey areas</string>
    <string name="amsler_grid_check3">Holes or spots in any areas of the grid</string>
    <string name="amsler_grid_check4">Centre dot or a part of the dot disappears</string>
    <string name="amsler_grid_check5">All lines straight, all sqaures equal in size</string>
    <string name="res_amslerGrid">Congratulations, you are not at risk for macular degeneration or other eye diseases related to central visual field!</string>
    <string name="explain_amslerGrid">The abnormal Amsler Grid is like below:</string>
    <string name="test_astigmatism">Astigmatism</string>
    <string name="testInstruction_astigmatism">Please cover one eye without pressing on the lid, and choose how lines in the above figure appear:</string>
    <string name="test_astigmatism_normal">All lines appear sharply focused and equally dark.</string>
    <string name="test_astigmatism_abnormal">Some sets of lines appear sharp and dark, while others are blurred and lighter.</string>
    <string name="explain_astigmatism">The abnormal Astigmatism is like below:</string>
    <string name="res_astigmatism">Congratulations, you are not at risk for astigmatism!</string>
    <string name="test_pd">Pupillary Distance</string>
    <string name="test_result_pd">The proportion of your pupil distance to face is </string>
    <string name="test_result_pd2">43</string>
    <string name="test_result_pd3">%.</string>
    <string name="test_result_pd4"></string>
    <string name="title_activity_activity__test__visual_acuity">Visual Acuity</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Please enter your old password</string>
    <string name="new_password">Please enter your new password</string>
    <string name="change_confirm">Confirm</string>
    <string name="Account">Account</string>
    <string name="account_username">Username:</string>
    <string name="account_username2">mandy</string>
    <string name="account_email">Email:</string>
    <string name="account_email2">jiayaoc@andrew.cmu.edu</string>
    <string name="account_age">Age:</string>
    <string name="account_age2">23</string>
    <string name="account_phoneNum">Phone Number:</string>
    <string name="account_phoneNum2">6505758852</string>

    <string name="test_motionacuity">Motion Acuity</string>
    <string name="test_visual_acuity">Visual Acuity</string>
    <string name="test_presbyopic">Presbyopic</string>

</resources>
