<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            style="@style/ToolBarTextStyle" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/sign_up_username"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/boundary"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp" />

        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/boundary"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp" />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/boundary"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp" />
        <EditText
            android:id="@+id/sign_up_confirmpassword"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:hint="@string/confirmpassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/boundary"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp" />
        <EditText
            android:id="@+id/sign_up_userAge"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:hint="@string/userAge"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/boundary"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp" />
        <EditText
            android:id="@+id/sign_up_userPhoneNumber"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:hint="@string/userPhoneNumber"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/boundary"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp"
            >


            <Button
                android:id="@+id/finish_sign_up_button"
                style="@style/shortButtonStyle"
                android:text="@string/action_sign_up"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="0dp" />
            <Button
                android:id="@+id/sign_up_back_button"
                style="@style/shortButtonStyle"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="0dp"
                android:text="@string/action_back"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>