<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Quiz"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            style="@style/ToolBarTextStyle" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:id="@+id/quizLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/quiz_question_vertical_marginTop"
            android:layout_marginBottom="@dimen/quiz_question_vertical_marginBottom"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/quiz_question_index"
                android:text="@string/quiz_question_index"
                style="@style/QuizTextViewStyle"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/quiz_question"
                style="@style/QuizTextViewStyle"
                android:text="@string/quiz_question"/>
        </LinearLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quiz_choice_group"
            android:layout_marginLeft="40dp"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/True"
                android:id="@+id/quiz_choice_1"
                android:textSize="20sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/False"
                android:id="@+id/quiz_choice_2"
                android:textSize="20sp"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="40dp"
            android:layout_marginTop="80dp"
            android:gravity="right">

            <Button
                android:id="@+id/quiz_next_button"
                style="@style/shortButtonStyle"
                android:text="@string/action_next"
                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>