<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/during1_button"
                    style="@style/thinButtonStyle"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/during1" />

                <Button
                    android:id="@+id/during2_button"
                    style="@style/thinButtonStyle"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/during2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/during3_button"
                    style="@style/thinButtonStyle"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/during3" />

                <Button
                    android:id="@+id/during4_button"
                    style="@style/thinButtonStyle"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/during4" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TestTitleTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:text="@string/action_choose_test" />

            <Spinner
                android:id="@+id/testSpinner"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <TextView
            style="@style/TestTitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:lineSpacingExtra="4dp"
            android:maxLines="10"
            android:id="@+id/historyTextView"
            android:text="" />

    </LinearLayout>
</RelativeLayout>